salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/Federal_Benefits_Plan_Change__c.object-meta.xml
<CustomObject>
    <description>Append-only change-history log for the Federal Benefits Gap Analysis Live Plan. Every edit made by an advisor on the dynamic web app inserts one row per field change.</description>
    <label>Plan Change</label>
    <nameField>
        <displayFormat>PLN-{0000}</displayFormat>
        <label>Plan Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>