salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Computed_Annual_Annuity__c.field-meta.xml
<CustomField>
    <fullName>Computed_Annual_Annuity__c</fullName>
    <description>Annual annuity recomputed at the moment of this edit. Lets us reconstruct any historical state of the plan from the change log alone.</description>
    <label>Computed Annual Annuity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>