salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Edited_At__c.field-meta.xml
<CustomField>
    <fullName>Edited_At__c</fullName>
    <description>Timestamp of the edit. Set by the web app at write time.</description>
    <label>Edited At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>