salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Edited_By__c.field-meta.xml
<CustomField>
    <fullName>Edited_By__c</fullName>
    <description>The advisor (User) who made the change. Set explicitly so the record's CreatedById (which may be a service account) is not the source of truth.</description>
    <label>Edited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Changes_Made</relationshipName>
    <type>Lookup</type>
</CustomField>