salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>API name of the Federal_Benefits_Intake__c field that changed.</description>
    <label>Field API Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>