salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <description>The Federal_Benefits_Intake__c record this change applies to. Master-detail so changes are deleted when the parent is.</description>
    <label>Intake</label>
    <referenceTo>Federal_Benefits_Intake__c</referenceTo>
    <relationshipLabel>Plan Changes</relationshipLabel>
    <relationshipName>Plan_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>