salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Field value after the edit, stored as text.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>