salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Field value before the edit, stored as text.</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>