salesforce/force-app/main/default/objects/Federal_Benefits_Plan_Change__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the change originated.</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Plan</fullName>
                <default>true</default>
                <label>Live Plan</label>
            </value>
            <value>
                <fullName>SF Direct Edit</fullName>
            </value>
            <value>
                <fullName>AI Parse</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>